--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
-    <div id="controls">
-        <button id="startGame">Start Game</button>
-        <button id="resetGame">Reset Game</button>
+    <div class="game-container">
+        <canvas id="gameCanvas" width="400" height="600"></canvas>
+        <div class="controls">
+            <button id="startGame">Start Game</button>
+            <button id="resetGame">Reset Game</button>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
